Fixed svg css overlap

--- a/src/stylesheets/animations.scss
+++ b/src/stylesheets/animations.scss
@@ -127,17 +127,6 @@
       text-shadow: 0 0 25px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
     }
   }
-  
-  @keyframes slide-in-bck-center {
-    0% {
-      transform: translateZ(600px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateZ(0);
-      opacity: 1;
-    }
-  }
 
  @keyframes slide-left {
   0% {
@@ -153,6 +142,33 @@
     opacity: 0;
   }
   100% {
+    opacity: 1;
+  }
+}
+
+@keyframes focus-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    transform: translateZ(300px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(12px);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+@keyframes puff-in-center {
+  0% {
+    transform: scale(2);
+    filter: blur(2px);
+    opacity: 0.01;
+  }
+  100% {
+    transform: scale(1);
+    filter: blur(0px);
     opacity: 1;
   }
 }
