--- a/src/stylesheets/grid.scss
+++ b/src/stylesheets/grid.scss
@@ -40,12 +40,20 @@
 
         .img-group {
             position: relative;
-            left: 23%;
+            left: 25%;
             margin-left: 0;
 
             img {
-                max-height: 120px;
-                margin: 0 5px;
+                width: 90px;
+                margin: 0 2px;
+                transform: scale(0.9);
+                transition: 0.3s all ease;
+
+                &:hover {
+                    cursor: pointer;
+                    transform: scale(1);
+                    transition: 0.3s all ease;
+                }
             }
         }
     }
