--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -121,8 +121,8 @@ a {
     @extend %slide-link-style;
 }
 
-.margin-bottom-6 {
-    margin-top: -3.5%;
+.margin-bottom-40 {
+    margin-top: -40px;
 }
 
 #cdot {
